infra/k8s-prod/auth-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: adriantepes/auth
---
# ClusterIP: Exposición interna entre Nodos del cluster (comunicación entre sí).
# Si no colocas el type, de forma predeterminada K8s sabrá que es ClusterIP.
apiVersion: v1
kind: Service
metadata:
  name: auth-srv
spec:
  selector:
    app: auth
  ports:
    - name: auth
      protocol: TCP
      port: 3000
      targetPort: 3000
