infra/k8s-prod/orders-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
        - name: orders
          image: adriantepes/orders
---
# ClusterIP: Exposición interna entre Nodos del cluster (comunicación entre sí).
# Si no colocas el type, de forma predeterminada K8s sabrá que es ClusterIP.
apiVersion: v1
kind: Service
metadata:
  name: orders-srv
spec:
  selector:
    app: orders
  ports:
    - name: orders
      protocol: TCP
      port: 3000
      targetPort: 3000
