infra/k8s-prod/payments-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payments
  template:
    metadata:
      labels:
        app: payments
    spec:
      containers:
        - name: payments
          image: adriantepes/payments
---
# ClusterIP: Exposición interna entre Nodos del cluster (comunicación entre sí).
# Si no colocas el type, de forma predeterminada K8s sabrá que es ClusterIP.
apiVersion: v1
kind: Service
metadata:
  name: payments-srv
spec:
  selector:
    app: payments
  ports:
    - name: payments
      protocol: TCP
      port: 3000
      targetPort: 3000
