infra/k8s-prod/tickets-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tickets
  template:
    metadata:
      labels:
        app: tickets
    spec:
      containers:
        - name: tickets
          image: adriantepes/tickets
---
# ClusterIP: Exposición interna entre Nodos del cluster (comunicación entre sí).
# Si no colocas el type, de forma predeterminada K8s sabrá que es ClusterIP.
apiVersion: v1
kind: Service
metadata:
  name: tickets-srv
spec:
  selector:
    app: tickets
  ports:
    - name: tickets
      protocol: TCP
      port: 3000
      targetPort: 3000
